--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@babel/runtime": "^7.20.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.42.1"
+        "react-hook-form": "^7.42.1",
+        "swr": "^2.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
