--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ global.d.ts
 /dist
 
 # yarn
-.yarn/
+.yarnrc.yml
+.yarn/*
 /node_modules/
 yarn-error.log
 
@@ -16,3 +17,4 @@ yarn-error.log
 
 # caches
 .eslintcache
+
