--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "packageManager": "yarn@3.1.1",
     "license": "MIT",
     "scripts": {
-        "bundle:clean": "rm -fr dist && mkdir dist",
+        "bundle:clean": "rm -fr dist && mkdir dist && rm -f public/main.js",
         "bundle:dev:watch": "rollup -c -w",
         "bundle:production": "rollup -c --environment NODE_ENV:production",
         "start": "npm-run-all bundle:clean -p bundle:dev:watch serve -l",
-        "serve": "servor dist --reload --browse",
+        "serve": "servor public --reload --browse",
         "build": "run-s bundle:clean bundle:production",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -19,6 +19,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
+        "@babel/eslint-parser": "^7.19.1",
         "@babel/preset-react": "^7.18.6",
         "@rollup/plugin-alias": "^4.0.2",
         "@rollup/plugin-babel": "^6.0.3",
